secure-cluster/releases/kuard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: netic-oaas-system
  labels:
    app: kuard
  name: kuard
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
